# dosbox-x-mcp

./: .gitignore  .mcp.json  CLAUDE.md  configure.ac
docs/: MCP_BUILD_PLAN.md  MCP_MANUAL.md
mcp-bridge/: README.md  bridge.mjs  launcher.mjs  package.json  tcp-client.mjs  tools.mjs
mcp-bridge/test/: bridge.test.mjs  sync-guard.test.mjs
scripts/: mcp-check.sh  mcp-install.sh  mcp-launch.sh  mcp_harness.py  mcp_slice10_screenshot.py  mcp_slice11_scan.py  mcp_slice12_lifecycle.py  mcp_slice13_passthrough.py  mcp_slice1_screenshot.py  mcp_slice2_ping.py  mcp_slice3_registers.py  mcp_slice4_memory.py  mcp_slice5_exec.py  mcp_slice6_breakpoints.py  mcp_slice7_writes.py  mcp_slice8_input.py  mcp_slice9_screen.py
src/: Makefile.am
src/debug/: debug.cpp  debug_gui.cpp
src/gui/: sdlmain.cpp
src/mcp/: Makefile.am  mcp.cpp  mcp.h  mcp_breakpoints.cpp  mcp_execution.cpp  mcp_input.cpp  mcp_json.cpp  mcp_json.h  mcp_lifecycle.cpp  mcp_memory.cpp  mcp_passthrough.cpp  mcp_protocol.cpp  mcp_protocol.h  mcp_registers.cpp  mcp_scan.cpp  mcp_screen.cpp  mcp_screenshot.cpp  mcp_server.cpp  mcp_server.h
tests/: mcp_protocol_tests.cpp  mcp_smoke_tests.cpp  tests.h
