AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/mcp -I$(top_srcdir)/src/ints

noinst_LIBRARIES = libmcp.a
libmcp_a_SOURCES = \
	mcp.cpp mcp.h \
	mcp_json.cpp mcp_json.h \
	mcp_protocol.cpp mcp_protocol.h \
	mcp_registers.cpp \
	mcp_memory.cpp \
	mcp_execution.cpp \
	mcp_breakpoints.cpp \
	mcp_scan.cpp \
	mcp_input.cpp \
	mcp_screen.cpp \
	mcp_screenshot.cpp \
	mcp_lifecycle.cpp \
	mcp_server.cpp mcp_server.h
